[gd_scene load_steps=33 format=2]

[ext_resource path="res://Enemies/BatHard.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Slime2.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Shadows/WhiteColour.shader" type="Shader" id=10]
[ext_resource path="res://Enemies/Slime.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "AnimationFly",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Slime",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Slime_2",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 10.6279

[sub_resource type="CapsuleShape2D" id=17]
radius = 9.75
height = 0.0

[sub_resource type="CircleShape2D" id=18]
radius = 80.0

[sub_resource type="CircleShape2D" id=19]
radius = 10.6257

[sub_resource type="Animation" id=20]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=21]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2147483664
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Base Bat, red:
	Increase Health == from 3 - 6
	Decreased wander range == From 4 - 2
	Increased Max Speed == from 50 - 60
	Increased Damage == from 1 - 2"
}
WANDER_TARGET_RANGE = 2

[node name="EntityPosition" type="Position2D" parent="."]
position = Vector2( -16, 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, 13.9999 )
scale = Vector2( 1.32812, 1.25 )
frames = SubResource( 15 )
animation = "Slime"
frame = 3
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.125, 0 )
shape = SubResource( 16 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
shape = SubResource( 17 )

[node name="stats" parent="." instance=ExtResource( 5 )]
max_health = 15
boss = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
modulate = Color( 1, 1, 1, 0.270588 )
light_mask = -2147483647
shape = SubResource( 18 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
position = Vector2( -0.0255547, -0.692839 )
collision_mask = 2147483652
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.095993, 0.176212 )
shape = SubResource( 19 )
disabled = false

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
disabled = true

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 20 )
anims/Stop = SubResource( 21 )

[node name="boss_timer" type="Timer" parent="."]
wait_time = 4.8
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="boss_timer" to="." method="_on_boss_timer_timeout"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
